added individual benchmark runtimes to stored metrics

--- a/README
+++ b/README
@@ -549,174 +549,203 @@ benchmark_400_perlbench
 benchmark_400_perlbench_max
 benchmark_400_perlbench_min
 benchmark_400_perlbench_reftime
+benchmark_400_perlbench_runtime
 benchmark_400_perlbench_stdev
 
 benchmark_401_bzip2
 benchmark_401_bzip2_max
 benchmark_401_bzip2_min
 benchmark_401_bzip2_reftime
+benchmark_401_bzip2_runtime
 benchmark_401_bzip2_stdev
 
 benchmark_403_gcc
 benchmark_403_gcc_max
 benchmark_403_gcc_min
 benchmark_403_gcc_reftime
+benchmark_403_gcc_runtime
 benchmark_403_gcc_stdev
 
 benchmark_410_bwaves
 benchmark_410_bwaves_max
 benchmark_410_bwaves_min
 benchmark_410_bwaves_reftime
+benchmark_410_bwaves_runtime
 benchmark_410_bwaves_stdev
 
 benchmark_416_gamess
 benchmark_416_gamess_max
 benchmark_416_gamess_min
 benchmark_416_gamess_reftime
+benchmark_416_gamess_runtime
 benchmark_416_gamess_stdev
 
 benchmark_429_mcf
 benchmark_429_mcf_max
 benchmark_429_mcf_min
 benchmark_429_mcf_reftime
+benchmark_429_mcf_runtime
 benchmark_429_mcf_stdev
 
 benchmark_433_milc
 benchmark_433_milc_max
 benchmark_433_milc_min
 benchmark_433_milc_reftime
+benchmark_433_milc_runtime
 benchmark_433_milc_stdev
 
 benchmark_434_zeusmp
 benchmark_434_zeusmp_max
 benchmark_434_zeusmp_min
 benchmark_434_zeusmp_reftime
+benchmark_434_zeusmp_runtime
 benchmark_434_zeusmp_stdev
 
 benchmark_435_gromacs
 benchmark_435_gromacs_max
 benchmark_435_gromacs_min
 benchmark_435_gromacs_reftime
+benchmark_435_gromacs_runtime
 benchmark_435_gromacs_stdev
 
 benchmark_436_cactusadm
 benchmark_436_cactusadm_max
 benchmark_436_cactusadm_min
 benchmark_436_cactusadm_reftime
+benchmark_436_cactusadm_runtime
 benchmark_436_cactusadm_stdev
 
 benchmark_437_leslie3d
 benchmark_437_leslie3d_max
 benchmark_437_leslie3d_min
 benchmark_437_leslie3d_reftime
+benchmark_437_leslie3d_runtime
 benchmark_437_leslie3d_stdev
 
 benchmark_444_namd
 benchmark_444_namd_max
 benchmark_444_namd_min
 benchmark_444_namd_reftime
+benchmark_444_namd_runtime
 benchmark_444_namd_stdev
 
 benchmark_445_gobmk
 benchmark_445_gobmk_max
 benchmark_445_gobmk_min
 benchmark_445_gobmk_reftime
+benchmark_445_gobmk_runtime
 benchmark_445_gobmk_stdev
 
 benchmark_447_dealii
 benchmark_447_dealii_max
 benchmark_447_dealii_min
 benchmark_447_dealii_reftime
+benchmark_447_dealii_runtime
 benchmark_447_dealii_stdev
 
 benchmark_450_soplex
 benchmark_450_soplex_max
 benchmark_450_soplex_min
 benchmark_450_soplex_reftime
+benchmark_450_soplex_runtime
 benchmark_450_soplex_stdev
 
 benchmark_453_povray
 benchmark_453_povray_max
 benchmark_453_povray_min
 benchmark_453_povray_reftime
+benchmark_453_povray_runtime
 benchmark_453_povray_stdev
 
 benchmark_454_calculix
 benchmark_454_calculix_max
 benchmark_454_calculix_min
 benchmark_454_calculix_reftime
+benchmark_454_calculix_runtime
 benchmark_454_calculix_stdev
 
 benchmark_456_hmmer
 benchmark_456_hmmer_max
 benchmark_456_hmmer_min
 benchmark_456_hmmer_reftime
+benchmark_456_hmmer_runtime
 benchmark_456_hmmer_stdev
 
 benchmark_458_sjeng
 benchmark_458_sjeng_max
 benchmark_458_sjeng_min
 benchmark_458_sjeng_reftime
+benchmark_458_sjeng_runtime
 benchmark_458_sjeng_stdev
 
 benchmark_459_gemsfdtd
 benchmark_459_gemsfdtd_max
 benchmark_459_gemsfdtd_min
 benchmark_459_gemsfdtd_reftime
+benchmark_459_gemsfdtd_runtime
 benchmark_459_gemsfdtd_stdev
 
 benchmark_462_libquantum
 benchmark_462_libquantum_max
 benchmark_462_libquantum_min
 benchmark_462_libquantum_reftime
+benchmark_462_libquantum_runtime
 benchmark_462_libquantum_stdev
 
 benchmark_464_h264ref
 benchmark_464_h264ref_max
 benchmark_464_h264ref_min
 benchmark_464_h264ref_reftime
+benchmark_464_h264ref_runtime
 benchmark_464_h264ref_stdev
 
 benchmark_465_tonto
 benchmark_465_tonto_max
 benchmark_465_tonto_min
 benchmark_465_tonto_reftime
+benchmark_465_tonto_runtime
 benchmark_465_tonto_stdev
 
 benchmark_470_lbm
 benchmark_470_lbm_max
 benchmark_470_lbm_min
 benchmark_470_lbm_reftime
+benchmark_470_lbm_runtime
 benchmark_470_lbm_stdev
 
 benchmark_471_omnetpp
 benchmark_471_omnetpp_max
 benchmark_471_omnetpp_min
 benchmark_471_omnetpp_reftime
+benchmark_471_omnetpp_runtime
 benchmark_471_omnetpp_stdev
 
 benchmark_473_astar
 benchmark_473_astar_max
 benchmark_473_astar_min
 benchmark_473_astar_reftime
+benchmark_473_astar_runtime
 benchmark_473_astar_stdev
 
 benchmark_481_wrf
 benchmark_481_wrf_max
 benchmark_481_wrf_min
 benchmark_481_wrf_reftime
+benchmark_481_wrf_runtime
 benchmark_481_wrf_stdev
 
 benchmark_482_sphinx3
 benchmark_482_sphinx3_max
 benchmark_482_sphinx3_min
 benchmark_482_sphinx3_reftime
+benchmark_482_sphinx3_runtime
 benchmark_482_sphinx3_stdev
 
 benchmark_483_xalancbmk
 benchmark_483_xalancbmk_max
 benchmark_483_xalancbmk_min
 benchmark_483_xalancbmk_reftime
+benchmark_483_xalancbmk_runtime
 benchmark_483_xalancbmk_stdev
 
 benchmark_version: [benchmark version]
