added meta_burst test execution parameter

--- a/README
+++ b/README
@@ -423,6 +423,9 @@ these parameters will be passed in to runspec using
 --define [parameter_name]=[parameter_value] and will then be accessible in the 
 config using macros %{parameter_name}
 
+* meta_burst                 If set to 1, designates testing performed in burst 
+                             mode (e.g. Amazon EC2 t-series burst)
+
 * meta_compute_service       The name of the compute service this test pertains
                              to. May also be specified using the environment 
                              variable bm_compute_service
@@ -776,6 +779,7 @@ ignore_errors
 iteration: [iteration number (used with incremental result directories)]
 iterations: number of iterations - 3 is default (required for compliant runs)
 max_copies
+meta_burst
 meta_compute_service 
 meta_compute_service_id*
 meta_cpu: [CPU model info]
