do not use environment variables when the same args have been set as cli args

--- a/README
+++ b/README
@@ -385,6 +385,9 @@ TESTING PARAMETERS
                              support this SSE level sse optimization will not 
                              be used
                              DEFAULT: SSE4.2
+                             
+* sse_skip                   Use in conjunction with sse=optimal to skip a 
+                             specific SSE flag
 
 * tune                       Tuning option: base, peak or all - reportable runs 
                              must be either base or all
